# the-ancient-tri

./: .gitignore  LICENSE.md  meson.build  readme.md
include/: BRDFShader.h  Mesh.h  Renderer.h  Shader.h  SimpleShader.h  Texture.h  helpers.h
shaders/: Blinn-Phong.frag  Blinn-Phong.vert  Cartoon.vert  Cel.frag  Instanced Blinn-Phong.vert  Lambert.frag  Lambert.vert  Oren-Nayar.frag  Oren-Nayar.vert
src/: BRDFShader.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  SimpleShader.cpp  Texture.cpp  helpers.cpp
